# text-processing-tool

./: .gitignore  .pre-commit-config.yaml  API_KEY_SETUP_GUIDE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MICROSOFT_TRANSLATOR_SETUP.md  Makefile  README.md  app.py  demo.py  docker-compose.yml  env.example  pyproject.toml  requirements-dev.txt  run.py  tox.ini
.github/workflows/: .ci.yml  ci.yml
docs/: GITHUB_SETUP_GUIDE.md  INPUT_AREAS_SEPARATION_SUMMARY.md  MULTI_WINDOW_IMPLEMENTATION.md  OCR_FEATURE_GUIDE.md  OCR_IMPLEMENTATION_SUMMARY.md  OCR_RESPONSE_UPDATE_SUMMARY.md  OCR_TASK_DETAIL_FIX_SUMMARY.md  PROMPT_MANAGEMENT_GUIDE.md  RESTRUCTURING_SUMMARY.md  TEXT_FILE_UPLOAD_IMPLEMENTATION_SUMMARY.md  conf.py  index.md
rules/: prompts.json  regex_replace.txt  translation_prompts.md
src/: __init__.py  app_factory.py
src/api/: __init__.py  routes.py
src/config/: __init__.py  app_config.py  ocr_config.py  translation_config.py
src/core/: __init__.py  text_analyzer.py  text_formatter.py  text_processor.py
src/services/: __init__.py  ocr_service.py  translation_service.py
src/utils/: __init__.py  response_helpers.py  validators.py
static/css/: style.css
static/js/: app.js
templates/: index.html
tests/: README.md  __init__.py  run_all_tests.py  test_api_endpoints.py  test_app.py  test_basic_functionality.py  test_configuration.py  test_core_modules.py  test_flask_ocr.py  test_integration.py  test_new_layout.py  test_ocr.py  test_ocr_complete.py  test_ocr_task_detail.py  test_ocr_task_highlight.py  test_ocr_updated.py  test_text_file_upload.py
